--- a/public/500.html
+++ b/public/500.html
@@ -8,7 +8,7 @@
   <body>
     <h1>We’re sorry, but something went wrong.</h1>
     <p>
-      We've been notified about this issue and we’ll take a look at it shortly.
+      We’ve been notified about this issue and we’ll take a look at it shortly.
     </p>
   </body>
 </html>
